--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^24.10.0",
     "@types/supertest": "^6.0.3",
     "supertest": "^7.1.4",
+    "tsup": "^8.5.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^4.0.8"
